flux/manifests/04-apps/productivity/windmill/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: windmill
  labels:
    app.kubernetes.io/name: windmill
