flux/manifests/04-apps/productivity/windmill/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: windmill
  namespace: windmill
spec:
  parentRefs:
    - name: main-gateway
      namespace: cilium-system
  hostnames:
    - "windmill.gateway.services.apocrathia.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: windmill-app
          port: 8000
